--- a/index.html
+++ b/index.html
@@ -4,61 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UPC-BLOG</title>
-    <style>
-      * {
-        box-sizing: border-box;
-      }
-      html,
-      button {
-        font-family: sans-serif;
-        font-size: 22px;
-        color: #def;
-      }
-      .wrap-button {
-        text-align: center;
-        padding: 5px;
-      }
-      button {
-        color: #234;
-      }
-      .row {
-        font-size: 0;
-        overflow: hidden;
-        white-space: nowrap;
-      }
-      .row > * {
-        display: inline-block;
-        font-size: 18px;
-        vertical-align: top;
-        overflow: hidden;
-        height: 100%;
-        white-space: normal;
-      }
-      body {
-        background: #1d1e1f;
-      }
-      div {
-        border: 5px solid;
-        border-radius: 15px;
-      }
-      [class|='item'] {
-        height: 100px;
-        color: orange;
-        padding: 5px;
-      }
-      [class|='wrap-list'] {
-        color: dodgerblue;
-        width: calc(100% / 3);
-        padding: 15px;
-      }
-      .wrapper {
-        color: fuchsia;
-        padding: 15px;
-      }
-      h1.title {
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div id="app">
