Added: renders,generators, and modefied model

--- a/index.html
+++ b/index.html
@@ -24,50 +24,37 @@
                 </div>
               </span>
             </li>
-            <li class="item-user">
+            <!-- <li class="item-user">
               <span>
                 <b><i>user</i></b>
               </span>
               <div class="wrap-button">
                 <button>Get posts</button>
               </div>
-            </li>
+            </li> -->
           </ul>
         </acticle>
         <acticle class="wrap-list-posts">
           <h2>posts</h2>
-          <ul class="list-posts">
-            <li class="item-post">
+          <ul id="elListPosts" class="list-posts">
+            <!-- <li class="item-post">
               <span>
                 <b><i>post</i></b>
               </span>
               <div class="wrap-button">
                 <button>Get comments</button>
               </div>
-            </li>
-            <li class="item-post">
-              <span>
-                <b><i>post</i></b>
-              </span>
-              <div class="wrap-button">
-                <button>Get comments</button>
-              </div>
-            </li>
+            </li> -->
           </ul>
         </acticle>
         <acticle class="wrap-list-comments">
           <h2>comments</h2>
-          <ul class="list-comments">
-            <li class="item-comment">
+          <ul id="elListComments" class="list-comments">
+            <!-- <li class="item-comment">
               <span>
                 <b><i>comment</i></b>
               </span>
-            </li>
-            <li class="item-comment">
-              <span>
-                <b><i>comment</i></b>
-              </span>
-            </li>
+            </li> -->
           </ul>
         </acticle>
       </section>
