--- a/index.html
+++ b/index.html
@@ -16,21 +16,13 @@
         <acticle class="wrap-list-users">
           <h2>users</h2>
           <ul id="elListUsers" class="list-users">
-            <li class="item-user">
-              <span>
-                <b><i>user</i></b>
-                <div class="wrap-button">
-                  <button>Get posts</button>
-                </div>
-              </span>
-            </li>
             <!-- <li class="item-user">
               <span>
                 <b><i>user</i></b>
+                <div class="wrap-button">
+                  <button>Get posts by userId</button>
+                </div>
               </span>
-              <div class="wrap-button">
-                <button>Get posts</button>
-              </div>
             </li> -->
           </ul>
         </acticle>
@@ -42,7 +34,7 @@
                 <b><i>post</i></b>
               </span>
               <div class="wrap-button">
-                <button>Get comments</button>
+                <button>Get comments by postId</button>
               </div>
             </li> -->
           </ul>
