--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         </acticle>
       </section>
     </div>
+    <script src="./js/normalizeUser.js"></script>
+    <script src="./js/api.js"></script>
     <script src="./js/model.js"></script>
     <script src="./js/view.js"></script>
+    <script src="./js/controller.js"></script>
   </body>
 </html>
