Modefied: index,controller,view

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="app">
       <h1 class="title">UPC-BLOG</h1>
       <div class="wrap-button">
-        <button>Get users</button>
+        <button id="get-users">Get users</button>
       </div>
       <section class="wrapper row">
         <acticle class="wrap-list-users">
