--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
             </div>
           </div>
         </div>
+        <div class="comments-list">
+          <!--  -->
+        </div>
         <div class="comment">
           <div class="field wide">
             <label for="">Ваш никнейм:</label>
